--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,11 @@
   <artifactId>tagged-text-tokenizer</artifactId>
   <version>0.2</version>
   <properties>
-    <lucene-version>7.3.0</lucene-version>
-    <slf4j-version>1.7.25</slf4j-version>
+      <!-- For dependency version ranges see https://stackoverflow.com/a/1172371/7504509-->
+      <lucene-version>8.11.2</lucene-version>
+      <slf4j-version>1.7.36</slf4j-version>
+      <log4j-version>2.17.2</log4j-version>
+      <surfire-version>3.0.0-M7</surfire-version>
   </properties>
   
   <repositories>
@@ -23,21 +26,21 @@
 		<dependency>
 		  <groupId>org.apache.logging.log4j</groupId>
 		  <artifactId>log4j-core</artifactId>
-		  <version>2.17.1</version>
+		  <version>${log4j-version}</version>
 		</dependency>
 
     <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
     <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
-        <version>2.7</version>
+        <version>2.11.0</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
     <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-text</artifactId>
-        <version>1.8</version>
+        <version>1.9</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-test-framework -->
@@ -66,14 +69,14 @@
     <dependency>
         <groupId>com.google.code.gson</groupId>
         <artifactId>gson</artifactId>
-        <version>2.8.9</version>
+        <version>2.9.0</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
     <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
-        <version>1.7.25</version>
+        <version>${slf4j-version}</version>
     </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
@@ -87,6 +90,7 @@
   </dependencies>
 
   <build>
+      <pluginManagement>
       <plugins>
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
@@ -102,8 +106,8 @@
           <plugin>
               <groupId>org.apache.maven.plugin</groupId>
               <artifactId>maven-surefire-plugin</artifactId>
-              <version>2.21.0</version>
-              <configuration>i
+              <version>${surfire-version}</version>
+              <configuration>
                   <additionalClasspathElements>
                        <additionalClasspathElement>${project.basedir}/target</additionalClasspathElement>
                   </additionalClasspathElements>
@@ -128,8 +132,8 @@
               </execution>
             </executions>
           </plugin>
-
     </plugins>
+      </pluginManagement>
   </build>
 
 </project>
